--- a/opentreemap/treemap/css/sass/partials/_subheader.scss
+++ b/opentreemap/treemap/css/sass/partials/_subheader.scss
@@ -174,6 +174,10 @@
             width: 110px;
         }
 
+        #udfc-search-date-from, #udfc-search-date-to {
+            padding: 8px 15px 3px;
+        }
+
         select {
             width: 100%;
 
